@@ -1,6 +1,7 @@
 4.6.2011 git
 Improving detection of updated datamodel for deltasql itself.
 Improving error messages.
+Updated versions of all deltasql clients, the version was retrieved with this ChangeLog :-)
 
 3.6.2011 git
 Password management:
